[gd_scene load_steps=12 format=2]

[ext_resource path="res://World/Enemys/Boss/BOSS_CLAW.gd" type="Script" id=1]
[ext_resource path="res://World/Enemys/Boss/gancho_003.png" type="Texture" id=2]
[ext_resource path="res://World/Enemys/Boss/gancho_004.png" type="Texture" id=3]
[ext_resource path="res://World/Enemys/Boss/gancho_005.png" type="Texture" id=4]
[ext_resource path="res://World/Enemys/Boss/gancho_002.png" type="Texture" id=5]
[ext_resource path="res://World/Enemys/Boss/gancho_001.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 39.3548

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 380.807 )

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 1, 1.2, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 300 ), Vector2( 0, 400 ), Vector2( 0, 300 ), Vector2( 0, 150 ), Vector2( 0, -291.817 ), Vector2( 0, -800 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8, 0.9, 1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "return"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -800 ), Vector2( 0, 0 ), Vector2( 0, 50 ), Vector2( 0, 0 ) ]
}

[node name="BOSS_CLAW" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="Hit_Box" type="Area2D" parent="Sprite"]
collision_layer = 64
collision_mask = 32

[node name="shape" type="CollisionShape2D" parent="Sprite/Hit_Box"]
position = Vector2( 7.07108, 173.241 )
shape = SubResource( 1 )

[node name="Detect" type="Area2D" parent="Sprite"]
collision_layer = 0
collision_mask = 2

[node name="shape" type="CollisionShape2D" parent="Sprite/Detect"]
position = Vector2( 7.13525, 610.167 )
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="Sprite"]
position = Vector2( 0, -599.491 )
texture = ExtResource( 6 )
flip_v = true

[node name="anim" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/return = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="Sprite/Detect" to="." method="_on_Detect_body_entered"]
[connection signal="body_exited" from="Sprite/Detect" to="." method="_on_Detect_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
